Polished C/C++ make/build/go commands

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -145,44 +145,51 @@ command.subsystem.11.*=3
 command.mode.11.*=savebefore:no
 command.shortcut.11.*=Ctrl+F5
 
+# Make
+#command.name.12.*=Make
+#command.12.*=MakeBuild
+#command.subsystem.12.*=3
+#command.mode.12.*=savebefore:no
+#command.shortcut.12.*=F6
+
 # External debug
-command.name.12.*=Debug (gdb)
-command.12.*=ExternalDebug
-command.subsystem.12.*=3
-command.mode.12.*=savebefore:no
-command.shortcut.12.*=Ctrl+F8
+command.name.13.*=Debug (gdb)
+command.13.*=ExternalDebug
+command.subsystem.13.*=3
+command.mode.13.*=savebefore:no
+command.shortcut.13.*=Ctrl+F8
 
 # Revision control commit
-command.name.13.*=Revision control commit
-command.13.*=RevisionControlCommit
-command.subsystem.13.*=3
-command.mode.13.*=savebefore:yes
-command.shortcut.13.*=Ctrl+Shift+C
-
-# Revision control update
-command.name.14.*=Revision control update
-command.14.*=RevisionControlUpdate
+command.name.14.*=Revision control commit
+command.14.*=RevisionControlCommit
 command.subsystem.14.*=3
 command.mode.14.*=savebefore:yes
-command.shortcut.14.*=Ctrl+Shift+U
+command.shortcut.14.*=Ctrl+Shift+C
+
+# Revision control update
+command.name.15.*=Revision control update
+command.15.*=RevisionControlUpdate
+command.subsystem.15.*=3
+command.mode.15.*=savebefore:yes
+command.shortcut.15.*=Ctrl+Shift+U
 
 # Box comment header
-command.name.15.*=Make header
-command.15.*=BoxCommentHeader
-command.subsystem.15.*=3
-command.mode.15.*=savebefore:no
-command.shortcut.15.*=Ctrl+B
-
-# Format code
-command.name.16.*=Format code
-command.16.*=FormatCode
+command.name.16.*=Make header
+command.16.*=BoxCommentHeader
 command.subsystem.16.*=3
 command.mode.16.*=savebefore:no
-command.shortcut.16.*=Ctrl+M
+command.shortcut.16.*=Ctrl+B
+
+# Format code
+command.name.17.*=Format code
+command.17.*=FormatCode
+command.subsystem.17.*=3
+command.mode.17.*=savebefore:no
+command.shortcut.17.*=Ctrl+M
 
 
 #####################################
-#   API's for different languages   #
+#   API's for different languagesz #
 #####################################
 
 # lua5.api              Lua C API calls
@@ -206,28 +213,44 @@ api.*.php=$(APILocation)/php.api;$(APILocation)/php.rijo.api
 ################################################################################
 
 # C/C++
-ccopts=-pedantic -O2 -Wall -Werror -std=c99
-cc=gcc $(ccopts) -c $(FileNameExt)
-ccc=g++ $(ccopts) -c $(FileNameExt)
-find_makefile=if [ ! -f ./Makefile ] && [ ! -f ./makefile ]; then cd .. ; fi
+ccopts=-pedantic -O2 -Wall -Werror
+cc=g++ $(ccopts) -c $(FileNameExt) -o $(FileName).o
+ccc=gcc $(ccopts) -c $(FileNameExt) -o $(FileName).o
 
-command.compile.*.c=echo "  CC    $(FileName).o" && $(cc)
-command.compile.*.cpp=echo "  CC    $(FileName).o" && $(ccc)
-command.go.*.c=./$(FileName) $(1) $(2) $(3) $(4)
-command.go.*.cpp=./$(FileName) $(1) $(2) $(3) $(4)
-command.build.*.c=$(find_makefile) && make clean all
-command.build.*.cpp=$(find_makefile) && make clean all
-command.build.*.h=$(find_makefile) && make clean all
-command.build.*.hpp=$(find_makefile) && make clean all
-command.go.subsystem.*.c=0
-command.go.subsystem.*.cpp=0
+find_makefile=if [ ! -f ./Makefile ]; then if [ ! -f ../Makefile ]; then echo "Could not find Makefile"; exit 1; else cd .. ; break; fi; else break; fi
+
+make.command=$(find_makefile) && PROGRAM=$(FileName) make -j 3
+command.compile.*.c=$(ccc) -std=c99
+command.build.*.c=$(make.command)
+command.build.*.h=$(make.command)
+command.clean.*.c=$(make.command) clean
+command.clean.*.h=$(make.command) clean
+command.go.*.c=if [ -x "$(FileName)" ]; then false; elif [ -x "../$(FileName)" ]; then cd ..; else echo "Executable not found: $(FileName)"; exit 1; fi; ./$(FileName) $(1) $(2) $(3) $(4)
+command.go.needs.*.c=
+
+command.compile.$(file.patterns.cplusplus)=$(cc)
+command.build.$(file.patterns.cplusplus)=$(make.command)
+command.clean.$(file.patterns.cplusplus)=$(make.command) clean
+command.go.$(file.patterns.cplusplus)=if [ -x "$(FileName)" ]; then false; elif [ -x "../$(FileName)" ]; then cd ..; else echo "Executable not found: $(FileName)"; exit 1; fi; ./$(FileName) $(1) $(2) $(3) $(4)
+command.go.needs.$(file.patterns.cplusplus)=
+
+command.name.0.$(file.patterns.cpp)=Indent
+command.0.$(file.patterns.cpp)=astyle --options=none --style=attach --indent=spaces=4 --indent-preproc-block --indent-preproc-define --indent-col1-comments --indent-namespaces --indent-classes --indent-modifiers --indent-switches --unpad-paren --align-pointer=name --align-reference=name --close-templates --keep-one-line-blocks --break-closing-brackets --attach-namespaces --attach-classes --attach-inlines --remove-brackets $(FileNameExt)
+command.is.filter.0.$(file.patterns.cpp)=1
+
+command.name.1.$(file.patterns.cplusplus)=Lint
+command.1.$(file.patterns.cplusplus)=g++ -W -Wall -Wshadow -Wwrite-strings -Wold-style-cast \
+	-Woverloaded-virtual -pedantic -Os -fno-exceptions -c $(FileNameExt)
 
 additional.typedef=v2 v3 v4 m2 m3 m4 int8_t int16_t int32_t uint8_t uint16_t uint32_t size_t v2_t v3_t point_t rect_t
 keywords.$(file.patterns.cpp)=$(keywordclass.cpp) $(additional.typedef)
 
+#command.go.subsystem.*.c=0
+#command.go.subsystem.*.cpp=0
+
+
 # Makefile
 command.build.Makefile=make clean all
-command.build.makefile=make clean all
 
 # Bash
 command.go.*.sh=./$(FileNameExt) $(1) $(2) $(3) $(4)
