Use UTF-8 by default + set antialiased font

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -55,6 +55,7 @@ $(source.files.web);\
 $(source.files.programming);\
 $(source.files.make);\
 $(source.files.misc)
+#source.default.extensions=$(source.files)
 
 # Editing
 strip.trailing.spaces=1
@@ -126,8 +127,9 @@ eol.mode=LF
 eol.auto=1
 clear.before.execute=1
 
-code.page=0
-output.codepage=0
+code.page=65001
+output.codepage=65001
+character.set=0
 
 properties.directory.enable=1 # lookup
 
@@ -290,7 +292,7 @@ font.base=$(font.monospace)
 font.comment=$(font.monospace),italics
 font.text=$(font.monospace)
 font.output=font:!Nimbus Mono L,size:8,bold
-
+font.quality=2
 
 ################################################################################
 #   COLORS   ###################################################################
