Updated some SciTE API files

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -199,15 +199,17 @@ command.shortcut.17.*=Ctrl+M
 # lualib5_annot.api     Lua calls with annotations
 
 APILocation=$(SciteUserHome)/.scite/api
-api.*.c=$(APILocation)/c.api
-api.*.cc=$(APILocation)/cpp.api;$(APILocation)/c.api
-api.*.cpp=$(APILocation)/cpp.api;$(APILocation)/c.api
+api.*.c=$(APILocation)/c.api;$(APILocation)/sdl.api
+api.*.h=$(APILocation)/c.api;$(APILocation)/sdl.api
+api.*.cpp=$(APILocation)/cpp.api;$(APILocation)/c.api;$(APILocation)/sdl.api
+api.*.hpp=$(APILocation)/cpp.api;$(APILocation)/c.api;$(APILocation)/sdl.api
 api.*.cs=$(APILocation)/cs.api
-api.*.lua=$(APILocation)/lua5.api;$(APILocation)/lualib5.api;$(APILocation)/SciTELua.api
+api.*.lua=$(APILocation)/lua5.api;$(APILocation)/lualib5_annot.api;$(APILocation)/SciTELua.api
 api.*.py=$(APILocation)/python.api
 api.*.java=$(APILocation)/java.api
 api.*.pl=$(APILocation)/perl.api
 api.*.php=$(APILocation)/php.api;$(APILocation)/php.rijo.api
+api.CMakeLists.txt=$(APILocation)/cmake.api
 
 
 ################################################################################
