Added markdown syntax highlightning

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -40,7 +40,7 @@ autocompleteword.incremental=1
 # Additional source-files
 source.files.text=*.txt;*.log;*.tmp
 source.files.config=*.conf;*.fdi
-source.files.document=*.tex;*.bib
+source.files.document=*.tex;*.bib;README;README.md;TODO
 source.files.script=*.sh;*.vbs;*.js;*.py;*.pl;*.rb;*.cgi;*.lua;*.bat;*.cmd
 source.files.web=*.html;*.htm;*.css;*.php;*xml
 source.files.programming=*.asm;*.c;*.cc;*.cpp;*.cxx;*.cs;*.asp;*.aspx;*.h;*.hh;*.hxx;*.hpp;*.sql;*.java;*.erl;*.vb;*.S;*.ld
@@ -191,7 +191,7 @@ command.shortcut.17.*=Ctrl+M
 
 
 #####################################
-#   API's for different languagesz #
+#   API's for different languages   #
 #####################################
 
 # lua5.api              Lua C API calls
@@ -976,3 +976,61 @@ style.lisp.9=$(color.text.variable)
 style.lisp.10=$(color.text.symbol)
 # End of line where string is not closed
 style.lisp.27=$(color.text.default),eolfilled
+
+################
+#   MARKDOWN   #
+################
+
+lexer.*.md=markdown
+lexer.*.markdown=markdown
+
+# Normal
+style.markdown.0=$(color.text.default)
+# Special
+style.markdown.1=$(color.text.default)
+# STRONG **double asterisk**
+style.markdown.2=$(color.text.default),bold
+# STRONG 2 (not used)
+#style.markdown.3=
+# EM1 (italic)
+style.markdown.4=$(color.text.default),italics
+# EM2 _single underline_
+style.markdown.5=$(color.text.default),italics
+# H1-H3
+style.markdown.6=$(color.text.method),bold
+style.markdown.7=$(color.text.method),bold
+style.markdown.8=$(color.text.method),bold
+# H4
+style.markdown.9=$(color.text.method),bold
+# H5
+style.markdown.10=$(color.text.method),bold
+# H6
+style.markdown.11=$(color.text.method),bold
+# prechar (up to three indent spaces, eg for a second-level list)
+style.markdown.12=$(color.text.default)
+# list
+style.markdown.13=$(color.text.keyword)
+# list
+style.markdown.14=$(color.text.keyword)
+# BLOCKQUOTE
+style.markdown.15=$(color.comment.box)
+# STRIKEOUT ~~double tilde~~ (apparently not in Markdown)
+style.markdown.16=$(color.text.error)
+# HRULE
+style.markdown.17=$(color.text.preproc)
+# LINK
+style.markdown.18=$(color.text.preproc)
+# CODE `single backticks`
+style.markdown.19=$(color.text.string)
+# CODE2
+style.markdown.20=$(color.text.string)
+# CODEBLOCK
+style.markdown.21=$(color.text.string)
+# COMMENT
+style.markdown.22=$(color.text.comment.line)
+# OPTION
+style.markdown.23=$(color.text.preproc)
+# PREPROC
+style.markdown.24=$(color.text.preproc)
+# POSTPROC
+style.markdown.25=$(color.text.preproc)
