Added shortcuts for faster page up/down

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -64,15 +64,16 @@ ensure.consistent.line.ends=1
 
 # User defined key commands
 user.shortcuts=\
-Ctrl+Shift+V|IDM_PASTEANDDOWN|\
 Ctrl+Alt+Left|IDM_PREVFILE|\
-Ctrl+Alt+Right|IDM_NEXTFILE|
+Ctrl+Alt+Right|IDM_NEXTFILE|\
+Ctrl+Alt+Down|2322|\
+Ctrl+Alt+Up|2320|
 
 # Context menu
-user.context.menu=\
-||\
-Next File|IDM_NEXTFILE|\
-Prev File|IDM_PREVFILE|
+#user.context.menu=\
+#||\
+#Next File|IDM_NEXTFILE|\
+#Prev File|IDM_PREVFILE|
 
 # Help
 command.scite.help=firefox "file://$(SciteDefaultHome)/SciTEDoc.html"
