Added git alias graphviz

--- a/.gitconfig
+++ b/.gitconfig
@@ -9,6 +9,8 @@
 	logc = shortlog -n -s 
 	alias = "!git config -l | grep alias | cut -c 7-"
 	tags = !sh -c 'git tag | sort -V'
+        graphviz = "!f() { echo 'digraph git {' ; git log --pretty='format:  %h -> { %p }' "$@" | sed 's/[0-9a-f][0-9a-f]*/"&"/g' ; echo '}'; }; f"
+
 [user]
 	email = rajoo@mail.com
 	name = RiJo
