--- a/.gitconfig
+++ b/.gitconfig
@@ -3,10 +3,10 @@
 	cl = clone
 	ci = commit
 	co = checkout
-	br = branch 
+	br = branch
 	lol = log --pretty='format:%C(auto)%h%d [%cn] %C(white)%s%C(reset)' --graph --decorate
 	prev = log --numstat -1
-	logc = shortlog -n -s 
+	logc = shortlog -n -s
 	alias = "!git config -l | grep alias | cut -c 7-"
 	tags = !sh -c 'git tag | sort -V'
         graphviz = "!f() { echo 'digraph git {' ; git log --pretty='format:  %h -> { %p }' "$@" | sed 's/[0-9a-f][0-9a-f]*/"&"/g' ; echo '}'; }; f"
@@ -14,7 +14,12 @@
 [user]
 	email = rajoo@mail.com
 	name = RiJo
+
 [push]
 	default = simple
+
 [color]
 	ui = true
+
+[diff]
+	compactionHeuristic = 1
