--- a/.gitconfig
+++ b/.gitconfig
@@ -9,7 +9,7 @@
 	logc = shortlog -n -s
 	alias = "!git config -l | grep alias | cut -c 7-"
 	tags = !sh -c 'git tag | sort -V'
-	sum = "!printf '>>> Branches <<<\n'; git branch -avv; printf '\n>>> Log <<<\n'; git lol -10"
+	sum = "!printf '>>> Branches <<<\n'; git branch -vv; printf '\n>>> Log <<<\n'; git lol -10"
         graphviz = "!f() { echo 'digraph git {' ; git log --pretty='format:  %h -> { %p }' "$@" | sed 's/[0-9a-f][0-9a-f]*/"&"/g' ; echo '}'; }; f"
 
 [user]
