--- a/.gitconfig
+++ b/.gitconfig
@@ -1,15 +1,12 @@
 [alias]
-	st = status -s
-	cl = clone
-	ci = commit
-	co = checkout
-	br = branch
 	lol = log --pretty='format:%C(auto)%h%d [%cn] %C(white)%s%C(reset)' --graph --decorate
 	prev = log --numstat -1
 	logc = shortlog -n -s
 	alias = "!git config -l | grep alias | cut -c 7-"
 	tags = !sh -c 'git tag | sort -V'
-	sum = "!printf '>>> Branches <<<\n'; git branch -vv; printf '\n>>> Status <<<\n'; git status -s --untracked-files=no; printf '\n>>> Log <<<\n'; git lol -10"
+	sum = "!printf '>>> Branches <<<\n'; git branch -vv; printf '\n>>> Stash <<<\n'; git stash list;  printf '\n>>> Status <<<\n'; git status -s --untracked-files=no; printf '\n>>> Log <<<\n'; git lol -10"
+	undo-commit = "reset --soft HEAD~1"
+	drop = "reset --hard HEAD"
         graphviz = "!f() { echo 'digraph git {' ; git log --pretty='format:  %h -> { %p }' "$@" | sed 's/[0-9a-f][0-9a-f]*/"&"/g' ; echo '}'; }; f"
 
 [user]
