--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
 	sum = "!printf '>>> Branches <<<\n'; git branch -vv; printf '\n>>> Stash <<<\n'; git stash list;  printf '\n>>> Status <<<\n'; git status -s --untracked-files=no; printf '\n>>> Log <<<\n'; git lol -10"
 	undo-commit = "reset --soft HEAD~1"
 	drop = "reset --hard HEAD"
+	tagger = "!f() { grep \"$1\" \"$3\" && sed -i -e \"s/$1/$2/g\" \"$3\" && git commit \"$3\" -m \"Bump version: '$2'\" && git tag \"$2\" && sed -i -e \"s/$2/$1/g\" \"$3\" && git commit \"$3\" -m \"Revert version: '$1'\"; }; f $(git rev-parse --abbrev-ref HEAD)"
         graphviz = "!f() { echo 'digraph git {' ; git log --pretty='format:  %h -> { %p }' "$@" | sed 's/[0-9a-f][0-9a-f]*/"&"/g' ; echo '}'; }; f"
 
 [user]
