--- a/.gitconfig
+++ b/.gitconfig
@@ -7,6 +7,7 @@
 	sum = "!printf '>>> Branches <<<\n'; git branch -vv; printf '\n>>> Stash <<<\n'; git stash list;  printf '\n>>> Status <<<\n'; git status -s --untracked-files=no; printf '\n>>> Log <<<\n'; git lol -10"
 	undo-commit = "reset --soft HEAD~1"
 	drop = "reset --hard HEAD"
+	tag-delete = "!f() { git tag -d "$@" && git push origin :"$@"; }; f"
         graphviz = "!f() { echo 'digraph git {' ; git log --pretty='format:  %h -> { %p }' "$@" | sed 's/[0-9a-f][0-9a-f]*/"&"/g' ; echo '}'; }; f"
 
 [user]
