--- a/.gitconfig
+++ b/.gitconfig
@@ -5,7 +5,7 @@
 	is-repo = !"[ -z \"$(git rev-parse --is-inside-work-tree 2> /dev/null)\" ] && exit 1; echo 'aight'; exit 0"
 	alias = !"~/.scripts/parse-config.sh ~/.gitconfig alias | awk -F' = ' '{ print \"\\033[33m\"$1\"\\033[0m: \"$2; }'"
 	tags = !"sh -c 'git tag | sort -V'"
-	sum = !"f() { [ -z \"$(git is-repo)\" ] && return 1; printf '>>> Branches <<<\n'; git branch -vv; printf '\n>>> Stash <<<\n'; git stash list; printf '\n>>> Status <<<\n'; git status -s -uno; printf '\n>>> Log <<<\n'; git lol -10 HEAD @{u} 2> /dev/null || git lol -10; }; f"
+	sum = !"f() { [ -z \"$(git is-repo)\" ] && return 1; printf '>>> Branches <<<\n'; git branch -vv; printf '\n>>> Stash <<<\n'; git stash list; printf '\n>>> Status <<<\n'; git status -s -uno; printf '\n>>> Submodules <<<\n'; git submodule status; printf '\n>>> Log <<<\n'; git lol -10 HEAD @{u} 2> /dev/null || git lol -10; }; f"
 	undo-commit = reset --soft HEAD~1
 	drop = reset --hard HEAD
 	unstage = reset HEAD
