--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@ set -g base-index 1
 set-window-option -g automatic-rename on
 
 set-option -g set-titles on
+set -g set-titles-string '#(whoami)::#h::#(curl ipecho.net/plain;echo)'
 set-option -g mouse on
 
 set -g status-keys vi
@@ -62,15 +63,15 @@ bind -t vi-copy 'v' begin-selection
 bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'
 
 # THEME
-set -g status-bg black
-set -g status-fg white
-set -g window-status-current-bg white
-set -g window-status-current-fg black
-set -g window-status-current-attr bold
-set -g status-interval 60
-set -g status-left-length 30
-set -g status-left '#[fg=green](#S) #(whoami)'
-set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
+#set -g status-bg black
+#set -g status-fg white
+#set -g window-status-current-bg white
+#set -g window-status-current-fg black
+#set -g window-status-current-attr bold
+#set -g status-interval 60
+#set -g status-left-length 30
+#set -g status-left '#[fg=green](#S) #(whoami)'
+#set -g status-right '#[fg=yellow]#(cut -d " " -f 1-3 /proc/loadavg)#[default] #[fg=white]%H:%M#[default]'
 
 set-option -g default-terminal screen-256color
 
