Added more file extensions as known types

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -40,11 +40,12 @@ autocompleteword.incremental=1
 # Additional source-files
 source.files.text=*.txt;*.log;*.tmp
 source.files.config=*.conf;*.fdi
-source.files.document=*.tex;*.bib;README;README.md;TODO
+source.files.document=*.tex;*.bib;README;README.md;TODO;TODO.md
 source.files.script=*.sh;*.vbs;*.js;*.py;*.pl;*.rb;*.cgi;*.lua;*.bat;*.cmd
 source.files.web=*.html;*.htm;*.css;*.php;*xml
 source.files.programming=*.asm;*.c;*.cc;*.cpp;*.cxx;*.cs;*.asp;*.aspx;*.h;*.hh;*.hxx;*.hpp;*.sql;*.java;*.erl;*.vb;*.S;*.ld
-source.files.make=Make*;make*;*.mak;
+source.files.make=Makefile;makefile;*.mk;configure;configure.in;configure.ac;Config.in
+source.files.patch=*.diff;*.patch
 source.files.misc=foo;*.foo;bar;*.bar
 source.files=\
 $(source.files.text);\
@@ -54,6 +55,7 @@ $(source.files.script);\
 $(source.files.web);\
 $(source.files.programming);\
 $(source.files.make);\
+$(source.files.patch);\
 $(source.files.misc)
 #source.default.extensions=$(source.files)
 
