Set correct language and indentation for alternate make files

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -283,9 +283,17 @@ command.go.*.bib=$(command.go.*.tex)
 #   OVERRIDE DEFAULT LANGUAGE SETTINGS   #######################################
 ################################################################################
 
+# Target correct language
+file.patterns.make=$(file.patterns.make);*.mk;configure.in;configure.ac;Config.in
+
+# Use correct indentation
 use.tabs.*.css=0
 use.tabs.*.asp=1
 use.tabs.Makefile=1
+use.tabs.*.mk=1
+use.tabs.configure.in=1
+use.tabs.configure.ac=1
+use.tabs.Config.in=1
 
 
 ################################################################################
