Unset ensure.final.line.end

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -61,7 +61,7 @@ $(source.files.misc)
 
 # Editing
 strip.trailing.spaces=1
-ensure.final.line.end=1
+#ensure.final.line.end=1
 ensure.consistent.line.ends=1
 
 # User defined key commands
