--- a/.gitconfig
+++ b/.gitconfig
@@ -12,7 +12,7 @@
     pushall = !git remote | xargs -L1 git push
     pullall = !git remote | xargs -L1 git pull
     fetchall = !git remote | xargs -L1 git fetch
-    mergeff = merge --ff-only
+    ff = merge --ff-only
 	tag-delete = !"f() { git tag -d "$@" && git push origin :"$@"; }; f"
 	tagger = !"f() { grep \"$1\" \"$3\" &> /dev/null; if [ $? -ne 0 ]; then echo \"Could not find '$1' in file '$3'.\"; exit 1; fi; sed -i -e \"s/$1/$2/g\" \"$3\" && git commit \"$3\" -m \"Bump version: '$2'\" && git tag \"$2\" && sed -i -e \"s/$2/$1/g\" \"$3\" && git commit \"$3\" -m \"Revert version: '$1'\"; }; f $(git rev-parse --abbrev-ref HEAD)"
 	graphviz = !"f() { echo 'digraph git {' ; git log --pretty='format:  %h -> { %p }' "$@" | sed 's/[0-9a-f][0-9a-f]*/"&"/g' ; echo '}'; }; f"
